--- a/index.html
+++ b/index.html
@@ -1,114 +1,114 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <style>
-    .accordion-content {
-      display: none;
-      height: 0;
-      opacity: 0;
-      overflow: hidden;
-      transition: all 0.3s;
-    }
-    .accordion-item.active > .accordion-content {
-      opacity: 1;
-    }
-  </style>
-</head>
-<body>
-  <div class="accordion">
-    <div class="accordion-item">
-      <button class="accordion-button">Toggle</button>
-      <div class="accordion-content">
-        Content 1
-        <div class="accordion">
-          <div class="accordion-item">
-            <button class="accordion-button">Toggle Nested 1</button>
-            <div class="accordion-content">
-              Nested Content 1
+  <head>
+    <style>
+      .accordion-content {
+        display: none;
+        height: 0;
+        opacity: 0;
+        overflow: hidden;
+        transition: all 0.3s;
+      }
+      .accordion-item.active > .accordion-content {
+        opacity: 1;
+      }
+    </style>
+  </head>
+  <body>
+    <div class="accordion">
+      <div class="accordion-item">
+        <button class="accordion-button">Toggle</button>
+        <div class="accordion-content">
+          Content 1
+          <div class="accordion">
+            <div class="accordion-item">
+              <button class="accordion-button">Toggle Nested 1</button>
+              <div class="accordion-content">
+                Nested Content 1
+              </div>
             </div>
-          </div>
-          <div class="accordion-item">
-            <button class="accordion-button">Toggle Nested 2</button>
-            <div class="accordion-content">
-              Nested Content 2
+            <div class="accordion-item">
+              <button class="accordion-button">Toggle Nested 2</button>
+              <div class="accordion-content">
+                Nested Content 2
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="accordion-item">
-      <button class="accordion-button">Toggle</button>
-      <div class="accordion-content">
-        Content 2
+      <div class="accordion-item">
+        <button class="accordion-button">Toggle</button>
+        <div class="accordion-content">
+          Content 2
+        </div>
       </div>
     </div>
-  </div>
 
-  <script>
-    const items = document.querySelectorAll('.accordion-item');
+    <script>
+      const items = document.querySelectorAll('.accordion-item');
 
-    items.forEach(item => {
-      const button = item.querySelector('.accordion-button');
-      button.addEventListener('click', () => {
-        toggleAccordionItem(item);
+      items.forEach(item => {
+        const button = item.querySelector('.accordion-button');
+        button.addEventListener('click', () => {
+          toggle(item);
+        });
       });
-    });
 
-    function toggleAccordionItem(item) {
-      if (item.classList.contains('active')) {
-        hide(item);
-      } else {
-        show(item);
-      }
-    }
-
-    function show(item) {
-      const accordion = item.closest('.accordion');
-      const allowMultiple = accordion.hasAttribute("data-allow-multiple");
-
-      if (!allowMultiple) {
-        hideAll(accordion);
+      function toggle(item) {
+        if (item.classList.contains('active')) {
+          hide(item);
+        } else {
+          show(item);
+        }
       }
 
-      item.classList.add('active');
-      const content = item.querySelector('.accordion-content');
-      content.style.display = 'block';
-      content.style.overflow = 'hidden';
+      function show(item) {
+        hideAll(item);
 
-      requestAnimationFrame(() => {
+        item.classList.add('active');
+        const content = item.querySelector('.accordion-content');
+        content.style.display = 'block';
+        content.style.overflow = 'hidden';
+
+        requestAnimationFrame(() => {
+          content.style.height = `${content.scrollHeight}px`;
+        });
+
+        content.addEventListener('transitionend', () => {
+          if (!item.classList.contains('active')) return;
+          content.style.height = 'auto';
+          content.style.overflow = 'visible';
+        });
+      }
+
+      function hide(item) {
+        const content = item.querySelector('.accordion-content');
+        content.style.overflow = 'hidden';
         content.style.height = `${content.scrollHeight}px`;
-      });
 
-      content.addEventListener('transitionend', () => {
-        if (!item.classList.contains('active')) return;
-        content.style.height = 'auto';
-        content.style.overflow = 'visible';
-      });
-    }
+        requestAnimationFrame(() => {
+          content.style.height = 0;
+        });
 
-    function hide(item) {
-      const content = item.querySelector('.accordion-content');
-      content.style.overflow = 'hidden';
-      content.style.height = `${content.scrollHeight}px`;
+        content.addEventListener('transitionend', () => {
+          if (item.classList.contains('active')) return;
+          content.style.display = 'none';
+        });
 
-      requestAnimationFrame(() => {
-        content.style.height = 0;
-      });
+        item.classList.remove('active');
+      }
 
-      content.addEventListener('transitionend', () => {
-        if (item.classList.contains('active')) return;
-        content.style.display = 'none';
-      });
+      function hideAll(item) {
+        const accordion = item.closest('.accordion');
+        const allowMultiple = accordion.hasAttribute("data-allow-multiple");
 
-      item.classList.remove('active');
-    }
+        if (allowMultiple) return;
 
-    function hideAll(accordion) {
-      const activeItems = accordion.querySelectorAll('.accordion-item');
-      activeItems.forEach((el) => {
-        hide(el);
-      });
-    }
-  </script>
-</body>
+        const activeItems = accordion.querySelectorAll('.accordion-item');
+        activeItems.forEach((el) => {
+          hide(el);
+        });
+      }
+    </script>
+  </body>
 </html>
